--- a/pub/index.html
+++ b/pub/index.html
@@ -6,17 +6,24 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+     crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="job-header">
-        
-    </header>
+    <div class="job-sidebar bg bg-secondary d-flex flex-column justify-content-start "> 
+            <div link-to="./files/home.html" class="logo fa fa-home p-3"> Home</div>
+            <div link-to="./files/Jobs.html" class="logo fa fa-address-book p-3"> List Jobs</div>
+            <div link-to="./files/Applicants.html" class="logo fa fa-user p-3"> List Applicants</div> 
+    </div>
     <div class="content">
 
     </div>
     <footer class="job-footer">
 
     </footer>
+    <script src="./index.js"></script>
 </body>
 </html>
