--- a/pub/index.html
+++ b/pub/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,15 +13,20 @@
 </head>
 <body>
     <div class="job-sidebar bg bg-secondary d-flex flex-column justify-content-start "> 
-            <div link-to="./files/home.html" class="logo fa fa-home p-3"> Home</div>
-            <div link-to="./files/Jobs.html" class="logo fa fa-address-book p-3"> List Jobs</div>
-            <div link-to="./files/Applicants.html" class="logo fa fa-user p-3"> List Applicants</div> 
+            <div class="img-logo"></div>
+            <div link-to="./files/home.html" class="fa fa-home p-3" id="home"> Home</div>
+            <div link-to="./files/Jobs.html" class="fa fa-address-book p-3"> List Jobs</div>
+            <div link-to="./files/Applicants.html" class="fa fa-user p-3"> List Applicants</div> 
     </div>
-    <div class="content">
+    <div class="content" id="content">
 
     </div>
     <footer class="job-footer">
-
+        Made with love by xandrf 
+        <div class="fa fa-heart text-danger"> </div>
+        <a class="fab fa-twitter" target="_blank" href="https://twitter.com/XandrfDev"></a> 
+        <a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/carlos-oliveira-8986a7175/"></a>
+        <a class="fab fa-github github" target="_blank" href="https://github.com/xandrf"></a>
     </footer>
     <script src="./index.js"></script>
 </body>
