added search functionality

--- a/src/files/Applicants.html
+++ b/src/files/Applicants.html
@@ -21,23 +21,13 @@
 </div>
 
 
-<table class="table table-dark">
+<table class="table mt-1" id="applicantTable">
     <tr>
         <td scope="col">#</td>
         <th scope="col">Name</th>
         <th scope="col">WageExectation</th>
         <th scope="col">Jobs</th>
+        <th scope="col">Search</th>
+        <th scope="col">Delete</th>
     </tr>
-    <tr>
-        <th scope="row">1</th>    
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
-        <td>Germany</td>
-    </tr>
-    <tr>
-    <th scope="row">2</th>      
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
-    </tr>
-  </table>
+</table>
