--- a/src/files/jobs.html
+++ b/src/files/jobs.html
@@ -23,10 +23,6 @@
         <label for="description">Description</label>
         <input type="text" name="description"id="description" class="input-group-text"/>
     </div>
-    <div class="form-label">
-        <label for="status">Status</label>
-        <input type="text" name="status"id="status" class="input-group-text"/>
-    </div>
     <button type="submit" class="btn btn-primary mt-1">Submit</button>
 </form>
 <div id="sucess-container" class="d-none jumbotron bg-success text-black pt-1">
@@ -37,7 +33,7 @@
 </div>
 
 
-<table class="table table-dark">
+<table class="table mt-1" id="jobTable">
     <tr>
         <th scope="col">#</td>
         <th scope="col">Title</td>
@@ -46,15 +42,7 @@
         <th scope="col">MaxPay</td>
         <th scope="col">Description</td>
         <th scope="col">Status</td>
+        <th scope="col">Search</th>
+        <th scope="col">Delete</th>
     </tr>
-    <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
-    </tr>
-    <tr>
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
-    </tr>
-  </table>
+</table>
