--- a/pub/files/jobs.html
+++ b/pub/files/jobs.html
@@ -34,7 +34,7 @@
 
 
 <table class="table mt-1" id="jobTable">
-    <tr>
+    <tr id="head">
         <th scope="col">#</td>
         <th scope="col">Title</td>
         <th scope="col">SubTitle</td>
