--- a/src/files/Applicants.html
+++ b/src/files/Applicants.html
@@ -22,7 +22,7 @@
 
 
 <table class="table mt-1" id="applicantTable">
-    <tr>
+    <tr id="head">
         <td scope="col">#</td>
         <th scope="col">Name</th>
         <th scope="col">WageExectation</th>
